@@ -6,6 +6,7 @@
   <deps purpose="build">
     <thirdpartyegg name="setuptools-git" minversion="1.1" maxversion="1.1.999"/>
     <thirdpartyegg name="pytest-runner"/>
+    <thirdpartyegg name="prompt_toolkit" minversion="2.0.10" maxversion="2.0.999"/>
   </deps>
 
   <deps purpose="run">
@@ -37,6 +38,7 @@
   <export entrypoint="reahl.component.commands" name="MigrateDB" locator="reahl.commands.prodshell:MigrateDB"/>
   <export entrypoint="reahl.component.commands" name="DiffDB" locator="reahl.commands.prodshell:DiffDB"/>
   <export entrypoint="reahl.component.commands" name="ListConfig" locator="reahl.commands.prodshell:ListConfig"/>
+  <export entrypoint="reahl.component.commands" name="CreateConfig" locator="reahl.commands.prodshell:CreateConfig"/>
   <export entrypoint="reahl.component.commands" name="CheckConfig" locator="reahl.commands.prodshell:CheckConfig"/>
   <export entrypoint="reahl.component.commands" name="ListDependencies" locator="reahl.commands.prodshell:ListDependencies"/>
   <export entrypoint="reahl.component.commands" name="ExportStaticFiles" locator="reahl.commands.prodshell:ExportStaticFiles"/>
