@@ -22,6 +22,8 @@ python-reahl (5.0) unstable; urgency=low
  * Changed the names of Inputs to include their form names so they can be unique in JS state (#154).
  * Added unique IDs to all HTML input controls (#154).
  * Added name_discriminator kwarg to PrimitiveInputs for distinguishing same-named inputs.
+ * Examples can be checked out and renamed.
+ * Added ability to add config, in a guided manner, to an existing project.
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 13 Dec 2018 15:15:00 +0200
 
